# roboy_speech_recognition

./: .gitignore  README.md  list_devices.py  requirements.txt  transcribe_streaming_indefinite.py
bing_stt/: CMakeLists.txt  package.xml
bing_stt/launch/: bing.launch
bing_stt/src/: bing_stt_client.py  bing_stt_server.py  bing_stt_with_vad.py  bing_voice.py
bing_tts/: CMakeLists.txt  package.xml
bing_tts/src/: bing_tts_client.py  bing_tts_server.py
cerevoice_tts/: CMakeLists.txt  package.xml
cerevoice_tts/src/: cerevoice_tts_server.py
cerevoice_tts/srv/: CerevoiceTTS.srv
common/: bing_voice.py  test_connection.py
roboy_speech_recognition/: CMakeLists.txt  package.xml
roboy_speech_recognition/launch/: speech_recognition.launch
roboy_speech_recognition/scripts/: sr_odas_src.py  stt_client.py  stt_server.py
scripts/: findid.py  stt_server.py
